# agent-design-patterns

./: .env.example  .gitignore  README.md  README.zh-CN.md  REFERENCE_IMPL.md  model_config.py  pyproject.toml
.github/workflows/: test.yml
action/: ACTION_MODULE_DEMO.zh-CN.md
action/a-tool-dispatch/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
action/b-plan-and-execute/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
action/c-prompt-chaining/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
action/d-guardrail-sandwich/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
action/payroll-lab/: README.md  README.zh-CN.md  action_trace.py  db.py  guardrail_lab.py  naked_loop.py  plan_execute_lab.py  stress_ablation.py  stress_full.py  stress_gaps.py  stress_vectors.py  stress_web_run.py  test_stress_lab.py  test_ui_service.py  tool_dispatch_lab.py  ui_service.py
collaboration/: boundary_contract.py  stress_collab_gaps.py  test_boundary_contract.py
collaboration/a-hierarchical-delegation/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
collaboration/b-fan-out-gather/: README.md  README.zh-CN.md
collaboration/c-adversarial-review/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
composition/: stress_compose.py
docs/: INTERFACE-REGISTRY.md  add_watermark.py  gen_interface_registry.py  render_matrix.py  render_paper_card.py
governance/: boundary_contract.py  test_boundary_contract.py
perception/: README.md  README.zh-CN.md
(+170 files in other folders)
